# hunting_game

./: .gitmodules  Cargo.toml
resources/: config.yml
resources/assets/: quad.mtl
src/: main.rs  obj_loader.rs  texture_loader.rs
src/loaders/: mod.rs  obj.rs
src/systems/: physics.rs
